# jax-tuts

./: .gitignore  README.md  pyproject.toml
quickstart/: quickstart 2.quarto_ipynb  quickstart.qmd  quickstart.quarto_ipynb
remat/: remat.html  remat.qmd
rope/: rope.qmd
tf/: baselines.py  create_figures.py  data.py  meta_model.py  model.py  train.py
