[project]
name = "jax-tuts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "grain>=0.2.3",
    "jaxtyping>=0.2.38",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "matplotlib-backend-sixel>=0.1.0",
    "optax>=0.2.4",
    "pynvim>=0.5.2",
    "rich>=13.9.4",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "treescope>=0.1.8",
]

[project.optional-dependencies]
cpu = [
    "jax>=0.5.0",
]
gpu = [
"jax[cuda]>=0.5.0",
"gpustat>=1.1.1",
]
